Sass with JS functionalities and Create-react-app

--- a/week-07/package.json
+++ b/week-07/package.json
@@ -2,7 +2,7 @@
   "name": "ga-fewd",
   "version": "1.0.0",
   "description": "Working with npm and Gulp",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
